Store/k8s/store-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-client-service
  namespace: store
spec:
  selector:
    app: store-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
