Store/k8s/store-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: store
  name: store-server-service
spec:
  selector:
    app: store-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
