Store/k8s/store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: store # Set the namespace to "store"
spec:
  rules:
    - host: ae73adf0061dc4d49ab515bf812150d9-1090975536.eu-central-1.elb.amazonaws.com
      http:
        paths:
          - path: /store(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-client-service
                port:
                  number: 80
          - path: /store/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-server-service
                port:
                  number: 4000
